# task-tracker-llm

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
src/: session.py  session_manager.py
src/api/: gemini.py
src/gui/: main_window.py  summary_category_view.py
src/utils/: categorization.py  clipboard.py  markdown.py
tests/: test_categorization.py  test_clipboard.py  test_gemini_api.py  test_main_window.py  test_markdown.py  test_session.py  test_session_manager.py  test_summary_category_view.py
